--- a/sass/layout/header-nav.scss
+++ b/sass/layout/header-nav.scss
@@ -1,5 +1,5 @@
 header {
-    background-image: url('/images/image-hero-desktop.jpg');
+    background-image: url('./images/image-hero-desktop.jpg');
     background-repeat: no-repeat;
     background-position: center top;
     background-size: cover;
@@ -35,7 +35,7 @@ nav {
 @media screen and (max-width:502px) {
     header {
         position: relative;
-        background-image: url(/images/image-hero-mobile.jpg);
+        background-image: url('./images/image-hero-mobile.jpg');
         background-position: center top;
         background-size: cover;
 
