--- a/sass/components/about-section.scss
+++ b/sass/components/about-section.scss
@@ -13,57 +13,13 @@
         justify-content: space-between;
         margin-bottom: 2rem;
 
-        &--heading-primary {
-            font-size: 2rem;
-            font-weight: 700;
-        }
-
-        &--heading-secondry {
-            font-weight: 700;
-            font-size: 3rem;
-            position: relative;
-
-
-        }
-
-        &--heading-secondry::after {
-            content: 'left';
-            font-size: 1.4rem;
-            color: hsl(0, 0%, 48%);
-            font-weight: 400;
-            margin-left: 0.5rem;
-            position: absolute;
-            top: 10px;
-
-
-        }
-
-
-
-        &--min-pledge-amount {
-            font-weight: 700;
-            color: $Moderate-cyan;
-            font-size: 1.5rem;
-        }
-
-        &--btn-secondry {
-            padding: 1.7rem 1.5rem;
-            width: 150px;
-            background-color: $Moderate-cyan;
-            border: none;
-            border-radius: 2.5rem;
-            color: #fff;
-
-            &:hover {
-                background-color: $Dark-cyan;
-            }
-        }
     }
+
 
     .row-3 {
         opacity: 0.5;
 
-        .col--btn-secondry {
+        .btn-opacity {
             background-color: hsl(0, 0%, 48%);
 
         }
@@ -75,7 +31,6 @@
 
     .pledge-section {
 
-
         &__products {
             padding: 1.8rem;
         }
@@ -83,25 +38,8 @@
         .col {
             flex-direction: column;
 
-            &--heading-primary {
-                font-size: 1.5rem !important;
-                margin-bottom: 1rem;
-            }
-
-            &--heading-secondry {
-                margin-bottom: 1.5rem;
-            }
-
-            &--btn-secondry {
-                width: 100px;
-                padding: 1rem;
-                font-size: 1rem;
-            }
-
-
-
-
 
         }
     }
+
 }
