--- a/sass/main.scss
+++ b/sass/main.scss
@@ -8,6 +8,7 @@
 @import './components/company-title-section';
 @import './components/fund-tracking';
 @import './components/about-section';
+@import './components/modal-section';
 
 
 @import './layout/home';
