--- a/style.css
+++ b/style.css
@@ -147,7 +147,7 @@ picture {
   .company-title-section__header--primary-text {
     font-size: 1.2rem; }
   .company-title-section .company-title-section__btns--btn1 {
-    padding: 1.8rem 3rem; }
+    padding: 1.8rem 5rem; }
   .company-title-section .company-title-section__btns--btn2 {
     overflow: hidden;
     padding: 0; }
@@ -223,54 +223,114 @@ picture {
   display: flex;
   justify-content: space-between;
   margin-bottom: 2rem; }
-  .pledge-section .col--heading-primary {
-    font-size: 2rem;
-    font-weight: 700; }
-  .pledge-section .col--heading-secondry {
-    font-weight: 700;
-    font-size: 3rem;
-    position: relative; }
-  .pledge-section .col--heading-secondry::after {
-    content: 'left';
-    font-size: 1.4rem;
-    color: #7a7a7a;
-    font-weight: 400;
-    margin-left: 0.5rem;
-    position: absolute;
-    top: 10px; }
-  .pledge-section .col--min-pledge-amount {
-    font-weight: 700;
-    color: #3cb4ac;
-    font-size: 1.5rem; }
-  .pledge-section .col--btn-secondry {
-    padding: 1.7rem 1.5rem;
-    width: 150px;
-    background-color: #3cb4ac;
-    border: none;
-    border-radius: 2.5rem;
-    color: #fff; }
-    .pledge-section .col--btn-secondry:hover {
-      background-color: #147b74; }
 
 .pledge-section .row-3 {
   opacity: 0.5; }
-  .pledge-section .row-3 .col--btn-secondry {
+  .pledge-section .row-3 .btn-opacity {
     background-color: #7a7a7a; }
 
 @media screen and (max-width: 550px) {
   .pledge-section__products {
     padding: 1.8rem; }
   .pledge-section .col {
-    flex-direction: column; }
-    .pledge-section .col--heading-primary {
-      font-size: 1.5rem !important;
-      margin-bottom: 1rem; }
-    .pledge-section .col--heading-secondry {
-      margin-bottom: 1.5rem; }
-    .pledge-section .col--btn-secondry {
-      width: 100px;
-      padding: 1rem;
-      font-size: 1rem; } }
+    flex-direction: column; } }
+
+.modal__column {
+  border: 1px solid #e0e0e0;
+  border-radius: 8px;
+  margin-top: 2rem; }
+
+.modal__top {
+  padding: 3rem;
+  position: relative; }
+
+.modal__bottom {
+  padding: 2rem;
+  border-top: 1px solid #e0e0e0; }
+
+.modal .submit-form {
+  display: flex;
+  align-items: center;
+  justify-content: space-between; }
+
+.modal .btn-align {
+  text-align: right; }
+
+.modal__sub-heading {
+  font-size: 1.8rem !important; }
+
+.modal__btn {
+  padding: 1.4rem 1rem !important;
+  width: 100px !important; }
+
+.modal__text {
+  color: #7a7a7a;
+  font-size: 1.5rem; }
+
+.modal__form {
+  display: inline-block;
+  position: relative; }
+
+.modal__input {
+  width: 100px;
+  border-radius: 2.5rem;
+  border: 1px solid #e0e0e0;
+  padding: 0 3.2rem 0 3.2rem;
+  height: 45px;
+  font-size: 1.4rem;
+  font-weight: 700;
+  margin-right: 1rem; }
+
+.modal__form::before {
+  content: '$';
+  position: absolute;
+  color: #adadad;
+  top: 26%;
+  left: 2rem;
+  font-weight: 700; }
+
+.modal__input:hover, .modal__input:focus {
+  border-color: #3cb4ac;
+  outline: none;
+  cursor: pointer; }
+
+.modal__inner {
+  display: flex;
+  align-items: center;
+  margin-bottom: 2rem;
+  gap: 10px; }
+
+.modal .flex {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  flex-grow: 1; }
+
+.modal .modal-paragraph {
+  margin-left: 2.7rem;
+  font-size: 1.5rem; }
+
+@media screen and (max-width: 550px) {
+  .modal .flex {
+    flex-direction: column;
+    align-items: flex-start; }
+  .modal__sub-heading {
+    position: absolute !important;
+    left: 33px;
+    bottom: 3px;
+    display: none; }
+  .modal .modal-paragraph {
+    margin-left: 0;
+    font-size: 1.2rem; }
+  .modal__input {
+    height: 40px; }
+  .modal__top {
+    padding: 3rem 1.5rem; }
+  .modal__bottom {
+    padding: 2rem 1rem; }
+  .submit-form {
+    flex-direction: column;
+    gap: 20px; } }
 
 .main-container {
   width: 80rem;
@@ -291,16 +351,15 @@ picture {
 .fund-tracking {
   background-color: #fff; }
 
-.about .heading-primary {
+.heading-primary {
   font-size: 2rem;
-  font-weight: 700;
-  margin-bottom: 2rem; }
+  font-weight: 700; }
 
-.about .heading-secondry {
+.heading-secondry {
   font-weight: 700;
   font-size: 2.5rem; }
 
-.about .paragraph {
+.paragraph {
   color: #7a7a7a;
   margin-bottom: 2rem;
   margin-top: 1rem;
@@ -308,17 +367,59 @@ picture {
   line-height: 28px;
   text-align: left; }
 
-@media screen and (max-width: 550px) {
-  .about .heading-primary {
-    margin-bottom: 1.5rem; }
-  .about .paragraph {
-    font-size: 1.3rem; } }
+.heading-primary {
+  font-size: 2rem;
+  font-weight: 700; }
+
+.heading-secondry {
+  font-weight: 700;
+  font-size: 3rem;
+  display: flex;
+  align-items: center;
+  position: relative;
+  gap: 5px; }
+
+.span {
+  font-size: 1.4rem;
+  color: #7a7a7a;
+  font-weight: 400; }
+
+.min-pledge-amount {
+  font-weight: 700;
+  color: #3cb4ac;
+  font-size: 1.5rem; }
+
+.btn-secondry {
+  padding: 1.7rem 1.5rem;
+  width: 150px;
+  background-color: #3cb4ac;
+  border: none;
+  border-radius: 2.5rem;
+  color: #fff;
+  font-family: "Commissioner", sans-serif; }
+  .btn-secondry:hover {
+    background-color: #147b74; }
 
 @media screen and (max-width: 810px) {
   .main-container {
     width: 100%; }
   .section-center {
     padding: 3rem; } }
+
+@media screen and (max-width: 550px) {
+  .paragraph {
+    font-size: 1.3rem;
+    line-height: 22px; }
+  .heading-primary {
+    font-size: 1.5rem !important; }
+  .heading-secondry {
+    margin-bottom: 1.5rem; }
+  .min-pledge-amount {
+    font-size: 1.2rem; }
+  .btn-secondry {
+    width: 100px;
+    padding: 1.3rem;
+    font-size: 1rem; } }
 
 body {
   max-width: 1440px;
