--- a/sass/layout/home.scss
+++ b/sass/layout/home.scss
@@ -21,11 +21,26 @@
     background-color: #fff;
 }
 
-.heading-primary {
-    font-size: 2rem;
-    font-weight: 700;
+.modal-container {
+    display: none;
+    width: 750px;
+    z-index: 30;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    height: 90vh;
+    transform: translate(-50%, -50%);
+    overflow-y: scroll;
+    box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.1);
+
 
 }
+
+.modal-container::-webkit-scrollbar {
+    display: none;
+}
+
+
 
 .heading-secondry {
     font-weight: 700;
@@ -95,6 +110,10 @@
 
     .section-center {
         padding: 3rem;
+    }
+
+    .modal-container {
+        width: 90vw;
     }
 
 
