--- a/style.css
+++ b/style.css
@@ -224,9 +224,10 @@ picture {
   justify-content: space-between;
   margin-bottom: 2rem; }
 
-.pledge-section .row-3 {
-  opacity: 0.5; }
-  .pledge-section .row-3 .btn-opacity {
+.row-3 {
+  opacity: 0.5;
+  pointer-events: none; }
+  .row-3 .btn-opacity {
     background-color: #7a7a7a; }
 
 @media screen and (max-width: 550px) {
@@ -235,82 +236,103 @@ picture {
   .pledge-section .col {
     flex-direction: column; } }
 
-.modal__column {
-  border: 1px solid #e0e0e0;
-  border-radius: 8px;
-  margin-top: 2rem; }
-
-.modal__top {
-  padding: 3rem;
+.modal {
   position: relative; }
-
-.modal__bottom {
-  padding: 2rem;
-  border-top: 1px solid #e0e0e0; }
-
-.modal .submit-form {
-  display: flex;
-  align-items: center;
-  justify-content: space-between; }
-
-.modal .btn-align {
-  text-align: right; }
-
-.modal__sub-heading {
-  font-size: 1.8rem !important; }
-
-.modal__btn {
-  padding: 1.4rem 1rem !important;
-  width: 100px !important; }
-
-.modal__text {
-  color: #7a7a7a;
-  font-size: 1.5rem; }
-
-.modal__form {
-  display: inline-block;
-  position: relative; }
-
-.modal__input {
-  width: 100px;
-  border-radius: 2.5rem;
-  border: 1px solid #e0e0e0;
-  padding: 0 3.2rem 0 3.2rem;
-  height: 45px;
-  font-size: 1.4rem;
-  font-weight: 700;
-  margin-right: 1rem; }
-
-.modal__form::before {
-  content: '$';
-  position: absolute;
-  color: #adadad;
-  top: 26%;
-  left: 2rem;
-  font-weight: 700; }
-
-.modal__input:hover, .modal__input:focus {
-  border-color: #3cb4ac;
-  outline: none;
-  cursor: pointer; }
-
-.modal__inner {
-  display: flex;
-  align-items: center;
-  margin-bottom: 2rem;
-  gap: 10px; }
-
-.modal .flex {
-  display: flex;
-  align-items: center;
-  gap: 10px;
-  flex-grow: 1; }
-
-.modal .modal-paragraph {
-  margin-left: 2.7rem;
-  font-size: 1.5rem; }
+  .modal__logo-box {
+    position: absolute;
+    right: -10px;
+    top: -15px; }
+  .modal__heading {
+    font-size: 2.2rem !important; }
+  .modal__radio {
+    position: relative;
+    width: 25px;
+    height: 25px;
+    border-radius: 50%;
+    border: 1px solid #7a7a7a;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer; }
+  .modal__radio::after {
+    content: '';
+    position: absolute;
+    width: 12px;
+    height: 12px;
+    border-radius: inherit;
+    background-color: #3cb4ac; }
+  .modal .disabled {
+    position: relative;
+    width: 25px;
+    height: 25px;
+    border-radius: 50%;
+    border: 1px solid #7a7a7a;
+    display: flex;
+    align-items: center;
+    justify-content: center; }
+  .modal__column {
+    border: 1px solid #e0e0e0;
+    border-radius: 8px;
+    margin-top: 2rem; }
+  .modal__top {
+    padding: 3rem;
+    position: relative; }
+  .modal__bottom {
+    padding: 2rem;
+    border-top: 1px solid #e0e0e0; }
+  .modal .submit-form {
+    display: flex;
+    align-items: center;
+    justify-content: space-between; }
+  .modal .btn-align {
+    text-align: right; }
+  .modal__sub-heading {
+    font-size: 1.8rem !important; }
+  .modal__btn {
+    padding: 1.4rem 1rem !important;
+    width: 100px !important; }
+  .modal__text {
+    color: #7a7a7a;
+    font-size: 1.5rem; }
+  .modal__form {
+    display: inline-block;
+    position: relative; }
+  .modal__input {
+    width: 100px;
+    border-radius: 2.5rem;
+    border: 1px solid #e0e0e0;
+    padding: 0 3.2rem 0 3.2rem;
+    height: 45px;
+    font-size: 1.4rem;
+    font-weight: 700;
+    margin-right: 1rem; }
+  .modal__form::before {
+    content: '$';
+    position: absolute;
+    color: #adadad;
+    top: 26%;
+    left: 2rem;
+    font-weight: 700; }
+  .modal__input:hover, .modal__input:focus {
+    border-color: #3cb4ac;
+    outline: none;
+    cursor: pointer; }
+  .modal__inner {
+    display: flex;
+    margin-bottom: 2rem;
+    gap: 15px; }
+  .modal .flex {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    flex-grow: 1; }
+  .modal .modal-paragraph {
+    margin-left: 3.7rem !important;
+    font-size: 1.5rem; }
 
 @media screen and (max-width: 550px) {
+  .modal__inner {
+    align-items: center; }
   .modal .flex {
     flex-direction: column;
     align-items: flex-start; }
@@ -320,12 +342,9 @@ picture {
     bottom: 3px;
     display: none; }
   .modal .modal-paragraph {
-    margin-left: 0;
-    font-size: 1.2rem; }
+    margin-left: 0 !important; }
   .modal__input {
     height: 40px; }
-  .modal__top {
-    padding: 3rem 1.5rem; }
   .modal__bottom {
     padding: 2rem 1rem; }
   .submit-form {
@@ -351,9 +370,20 @@ picture {
 .fund-tracking {
   background-color: #fff; }
 
-.heading-primary {
-  font-size: 2rem;
-  font-weight: 700; }
+.modal-container {
+  display: none;
+  width: 750px;
+  z-index: 30;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  height: 90vh;
+  transform: translate(-50%, -50%);
+  overflow-y: scroll;
+  box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.1); }
+
+.modal-container::-webkit-scrollbar {
+  display: none; }
 
 .heading-secondry {
   font-weight: 700;
@@ -404,7 +434,9 @@ picture {
   .main-container {
     width: 100%; }
   .section-center {
-    padding: 3rem; } }
+    padding: 3rem; }
+  .modal-container {
+    width: 90vw; } }
 
 @media screen and (max-width: 550px) {
   .paragraph {
