--- a/sass/components/modal-section.scss
+++ b/sass/components/modal-section.scss
@@ -1,10 +1,16 @@
 .modal {
-    position: relative;
+
 
     &__logo-box {
-        position: absolute;
-        right: -10px;
-        top: -15px;
+        text-align: right;
+        cursor: pointer;
+
+    }
+
+    &__close-img {
+        display: inline-block;
+        margin-bottom: 2rem;
+        margin-left: 2rem;
     }
 
 
