--- a/style.css
+++ b/style.css
@@ -236,99 +236,120 @@ picture {
   .pledge-section .col {
     flex-direction: column; } }
 
-.modal {
+.modal__logo-box {
+  text-align: right;
+  cursor: pointer; }
+
+.modal__close-img {
+  display: inline-block;
+  margin-bottom: 2rem;
+  margin-left: 2rem; }
+
+.modal__heading {
+  font-size: 2.2rem !important; }
+
+.modal__radio {
+  position: relative;
+  width: 25px;
+  height: 25px;
+  border-radius: 50%;
+  border: 1px solid #7a7a7a;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer; }
+
+.modal__radio::after {
+  content: '';
+  position: absolute;
+  width: 12px;
+  height: 12px;
+  border-radius: inherit;
+  background-color: #3cb4ac; }
+
+.modal .disabled {
+  position: relative;
+  width: 25px;
+  height: 25px;
+  border-radius: 50%;
+  border: 1px solid #7a7a7a;
+  display: flex;
+  align-items: center;
+  justify-content: center; }
+
+.modal__column {
+  border: 1px solid #e0e0e0;
+  border-radius: 8px;
+  margin-top: 2rem; }
+
+.modal__top {
+  padding: 3rem;
   position: relative; }
-  .modal__logo-box {
-    position: absolute;
-    right: -10px;
-    top: -15px; }
-  .modal__heading {
-    font-size: 2.2rem !important; }
-  .modal__radio {
-    position: relative;
-    width: 25px;
-    height: 25px;
-    border-radius: 50%;
-    border: 1px solid #7a7a7a;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    cursor: pointer; }
-  .modal__radio::after {
-    content: '';
-    position: absolute;
-    width: 12px;
-    height: 12px;
-    border-radius: inherit;
-    background-color: #3cb4ac; }
-  .modal .disabled {
-    position: relative;
-    width: 25px;
-    height: 25px;
-    border-radius: 50%;
-    border: 1px solid #7a7a7a;
-    display: flex;
-    align-items: center;
-    justify-content: center; }
-  .modal__column {
-    border: 1px solid #e0e0e0;
-    border-radius: 8px;
-    margin-top: 2rem; }
-  .modal__top {
-    padding: 3rem;
-    position: relative; }
-  .modal__bottom {
-    padding: 2rem;
-    border-top: 1px solid #e0e0e0; }
-  .modal .submit-form {
-    display: flex;
-    align-items: center;
-    justify-content: space-between; }
-  .modal .btn-align {
-    text-align: right; }
-  .modal__sub-heading {
-    font-size: 1.8rem !important; }
-  .modal__btn {
-    padding: 1.4rem 1rem !important;
-    width: 100px !important; }
-  .modal__text {
-    color: #7a7a7a;
-    font-size: 1.5rem; }
-  .modal__form {
-    display: inline-block;
-    position: relative; }
-  .modal__input {
-    width: 100px;
-    border-radius: 2.5rem;
-    border: 1px solid #e0e0e0;
-    padding: 0 3.2rem 0 3.2rem;
-    height: 45px;
-    font-size: 1.4rem;
-    font-weight: 700;
-    margin-right: 1rem; }
-  .modal__form::before {
-    content: '$';
-    position: absolute;
-    color: #adadad;
-    top: 26%;
-    left: 2rem;
-    font-weight: 700; }
-  .modal__input:hover, .modal__input:focus {
-    border-color: #3cb4ac;
-    outline: none;
-    cursor: pointer; }
-  .modal__inner {
-    display: flex;
-    margin-bottom: 2rem;
-    gap: 15px; }
-  .modal .flex {
-    display: flex;
-    align-items: center;
-    gap: 10px;
-    flex-grow: 1; }
-  .modal .modal-paragraph {
-    margin-left: 3.7rem !important;
-    font-size: 1.5rem; }
+
+.modal__bottom {
+  padding: 2rem;
+  border-top: 1px solid #e0e0e0; }
+
+.modal .submit-form {
+  display: flex;
+  align-items: center;
+  justify-content: space-between; }
+
+.modal .btn-align {
+  text-align: right; }
+
+.modal__sub-heading {
+  font-size: 1.8rem !important; }
+
+.modal__btn {
+  padding: 1.4rem 1rem !important;
+  width: 100px !important; }
+
+.modal__text {
+  color: #7a7a7a;
+  font-size: 1.5rem; }
+
+.modal__form {
+  display: inline-block;
+  position: relative; }
+
+.modal__input {
+  width: 100px;
+  border-radius: 2.5rem;
+  border: 1px solid #e0e0e0;
+  padding: 0 3.2rem 0 3.2rem;
+  height: 45px;
+  font-size: 1.4rem;
+  font-weight: 700;
+  margin-right: 1rem; }
+
+.modal__form::before {
+  content: '$';
+  position: absolute;
+  color: #adadad;
+  top: 26%;
+  left: 2rem;
+  font-weight: 700; }
+
+.modal__input:hover, .modal__input:focus {
+  border-color: #3cb4ac;
+  outline: none;
+  cursor: pointer; }
+
+.modal__inner {
+  display: flex;
+  margin-bottom: 2rem;
+  gap: 15px; }
+
+.modal .flex {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  flex-grow: 1; }
+
+.modal .modal-paragraph {
+  margin-left: 3.7rem !important;
+  font-size: 1.5rem; }
 
 @media screen and (max-width: 550px) {
   .modal__inner {
@@ -371,18 +392,36 @@ picture {
   background-color: #fff; }
 
 .modal-container {
-  display: none;
+  height: 100vh;
+  width: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: 30;
+  opacity: 0;
+  visibility: hidden;
+  transform: scale(0.5);
+  transition-delay: 0.9s;
+  transition: all .3s; }
+  .modal-container__show-modal {
+    opacity: 1;
+    visibility: visible;
+    transform: scale(1); }
+
+.modal {
   width: 750px;
   z-index: 30;
-  position: fixed;
+  position: absolute;
   top: 50%;
   left: 50%;
   height: 90vh;
   transform: translate(-50%, -50%);
   overflow-y: scroll;
-  box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.1); }
+  box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.1);
+  background-color: #fff; }
 
-.modal-container::-webkit-scrollbar {
+.modal::-webkit-scrollbar {
   display: none; }
 
 .heading-secondry {
@@ -435,7 +474,7 @@ picture {
     width: 100%; }
   .section-center {
     padding: 3rem; }
-  .modal-container {
+  .modal {
     width: 90vw; } }
 
 @media screen and (max-width: 550px) {
