--- a/sass/components/modal-section.scss
+++ b/sass/components/modal-section.scss
@@ -14,12 +14,10 @@
     }
 
 
-    &__heading {
+    &__header {
         font-size: 2.2rem !important;
 
     }
-
-
 
     &__radio {
         position: relative;
@@ -33,33 +31,46 @@
         cursor: pointer;
     }
 
-    &__radio::after {
-        content: '';
-        position: absolute;
-        width: 12px;
-        height: 12px;
-        border-radius: inherit;
-        background-color: $Moderate-cyan;
-    }
-
-    .disabled {
-        position: relative;
-        width: 25px;
-        height: 25px;
-        border-radius: 50%;
-        border: 1px solid $Dark-gray;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-
-
-    }
-
-
     &__column {
         border: 1px solid hsl(0, 0%, 88%);
         border-radius: 8px;
         margin-top: 2rem;
+
+
+        &.active {
+            border-color: $Moderate-cyan;
+
+            .modal__radio::after {
+                content: '';
+                position: absolute;
+                width: 12px;
+                height: 12px;
+                border-radius: inherit;
+                background-color: $Moderate-cyan;
+
+            }
+
+            .modal__bottom {
+                display: block;
+            }
+
+        }
+
+    }
+
+    .flex {
+        display: flex;
+        align-items: center;
+        gap: 10px;
+        flex-grow: 1;
+
+    }
+
+
+
+    .modal-paragraph {
+        margin-left: 3.7rem !important;
+        font-size: 1.5rem;
     }
 
     &__top {
@@ -68,10 +79,20 @@
 
     }
 
+
+
+
+    &__heading:hover {
+        color: $Moderate-cyan;
+        cursor: pointer;
+    }
+
+
+
     &__bottom {
         padding: 2rem;
         border-top: 1px solid hsl(0, 0%, 88%);
-        // display: none;
+        display: none;
 
     }
 
@@ -143,28 +164,24 @@
 
     &__inner {
         display: flex;
-        // align-items: flex-start;
+
         margin-bottom: 2rem;
         gap: 15px;
     }
 
-    .flex {
+
+
+    .disabled {
+        position: relative;
+        width: 25px;
+        height: 25px;
+        border-radius: 50%;
+        border: 1px solid $Dark-gray;
         display: flex;
         align-items: center;
-        gap: 10px;
-        flex-grow: 1;
+        justify-content: center;
 
 
-
-
-
-    }
-
-
-
-    .modal-paragraph {
-        margin-left: 3.7rem !important;
-        font-size: 1.5rem;
     }
 
 
@@ -196,7 +213,7 @@
 
         .modal-paragraph {
             margin-left: 0 !important;
-            // font-size: 1.2rem;
+
         }
 
         &__input {
