--- a/sass/components/modal-section.scss
+++ b/sass/components/modal-section.scss
@@ -235,3 +235,72 @@
 
 
 }
+
+.thanku-modal {
+
+
+    &__content {
+        width: 600px;
+        text-align: center;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        overflow-y: auto;
+        box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.1);
+        height: auto;
+
+    }
+
+    &__checkImg {
+        display: inline-block;
+        margin-bottom: 2rem;
+    }
+
+
+    &__header {
+        font-size: 3rem;
+        font-weight: 700;
+        margin-bottom: 2rem;
+    }
+
+    &__paragraph {
+        color: $Dark-gray;
+        line-height: 30px;
+        margin-bottom: 2rem;
+    }
+
+}
+
+@media screen and (max-width:663px) {
+    .thanku-modal {
+        width: 100%;
+        padding: 0 2rem;
+    }
+
+}
+
+@media screen and (max-width:500px) {
+
+    .thanku-modal {
+        &__content {
+            padding: 2rem;
+
+        }
+
+        &__header {
+            font-size: 2.2rem;
+            font-weight: 700;
+            margin-bottom: 1.5rem;
+        }
+
+        &__paragraph {
+            color: $Dark-gray;
+            line-height: 22px;
+            margin-bottom: 2rem;
+        }
+
+    }
+
+
+}
