--- a/sass/layout/home.scss
+++ b/sass/layout/home.scss
@@ -61,10 +61,32 @@
 
 
 
+
+
 }
 
 .modal::-webkit-scrollbar {
     display: none;
+}
+
+.thanku-modal {
+    height: 100vh;
+    width: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
+    background-color: rgba(0, 0, 0, .5);
+    z-index: 30;
+    opacity: 0;
+    visibility: hidden;
+    transition: all .3s;
+
+    &__show-check-modal {
+        opacity: 1;
+        visibility: visible;
+
+    }
+
 }
 
 
