--- a/style.css
+++ b/style.css
@@ -380,6 +380,48 @@ picture {
     flex-direction: column;
     gap: 20px; } }
 
+.thanku-modal__content {
+  width: 600px;
+  text-align: center;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  overflow-y: auto;
+  box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.1);
+  height: auto; }
+
+.thanku-modal__checkImg {
+  display: inline-block;
+  margin-bottom: 2rem; }
+
+.thanku-modal__header {
+  font-size: 3rem;
+  font-weight: 700;
+  margin-bottom: 2rem; }
+
+.thanku-modal__paragraph {
+  color: #7a7a7a;
+  line-height: 30px;
+  margin-bottom: 2rem; }
+
+@media screen and (max-width: 663px) {
+  .thanku-modal {
+    width: 100%;
+    padding: 0 2rem; } }
+
+@media screen and (max-width: 500px) {
+  .thanku-modal__content {
+    padding: 2rem; }
+  .thanku-modal__header {
+    font-size: 2.2rem;
+    font-weight: 700;
+    margin-bottom: 1.5rem; }
+  .thanku-modal__paragraph {
+    color: #7a7a7a;
+    line-height: 22px;
+    margin-bottom: 2rem; } }
+
 .main-container {
   width: 80rem;
   margin: 0 auto;
@@ -428,6 +470,21 @@ picture {
 
 .modal::-webkit-scrollbar {
   display: none; }
+
+.thanku-modal {
+  height: 100vh;
+  width: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: 30;
+  opacity: 0;
+  visibility: hidden;
+  transition: all .3s; }
+  .thanku-modal__show-check-modal {
+    opacity: 1;
+    visibility: visible; }
 
 .heading-secondry {
   font-weight: 700;
