--- a/style.css
+++ b/style.css
@@ -95,6 +95,16 @@ picture {
   max-width: 100%;
   display: block; }
 
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0; }
+
+/* Firefox */
+input[type=number] {
+  -moz-appearance: textfield; }
+
 .company-title-section {
   position: relative; }
   .company-title-section__logo-div {
