--- a/style.css
+++ b/style.css
@@ -418,7 +418,9 @@ input[type=number] {
 @media screen and (max-width: 663px) {
   .thanku-modal {
     width: 100%;
-    padding: 0 2rem; } }
+    padding: 0 2rem; }
+    .thanku-modal__content {
+      width: 90%; } }
 
 @media screen and (max-width: 500px) {
   .thanku-modal__content {
